<resources>
    <string name="app_name">Brojač koraka</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Permissioni odbijeni, ali su potrebni za funkcioniranje aplikacije.</string>
    <string name="settings">Settings</string>
    <string name="google_login">Prijava putem Google računa</string>
    <string name="author">Izradio Zlatko Salitrežić</string>
    <string name="save_wanted_steps">SPREMI BROJ KORAKA</string>
    <string name="enter_wanted_steps">Unesite željeni broj koraka kao cilj</string>
    <string name="average_steps_last_week">Prosjecan broj koraka zadnjih 7 dana: %f</string>
    <string name="average_steps_last_month">Prosjecan broj koraka zadnjih 30 dana: %f</string>
    <string name="day">DAN</string>
    <string name="week">TJEDAN</string>
    <string name="month">MJESEC</string>
    <string name="choose_time">Odaberi period za koji zelis prikazati korake:</string>
    <string name="subscribe_problem">Postoji problem sa subscribeanjem za korake</string>
    <string name="enter_wanted_steps_error">Unesite zeljeni broj koraka!</string>
    <string name="wanted_steps_saved">Zeljeni koraci spremljeni!</string>
    <string name="load_step_count_problem">Postoji problem u dohvacanju koraka!</string>
    <string name="steps_count">Broj koraka</string>
    <string name="achieved">Ostvareno</string>
    <string name="wanted">Uneseno</string>

</resources>