<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/steps_counter"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="263dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/arbutus"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/google_login_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="14dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/google_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/google_login"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="34dp"
            android:layout_height="29dp"
            android:layout_marginStart="14dp"
            app:srcCompat="@drawable/google" />

    </LinearLayout>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/author"
        android:textColor="@color/black" />

</LinearLayout>